# smsTransfer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  install.sh
include/: Core.hpp
include/service/: IService.hpp  ServiceEnum.hpp  ServiceFactory.hpp  SmsRedirectionService.hpp
src/: Core.cpp  main.cpp
src/service/: ServiceFactory.cpp  SmsRedirectionService.cpp
